tests/fail_var_let.rte
fun main() -> int {
  var x = 0;
  let y = x;
  x = 0;      // error: no write permission
  return y;
}
